WT-10990 Supplement SQL connector to allow uploading metadata for a tag