@@ -5,6 +5,7 @@
 package io.wisetime.connector.sql;
 
 import com.github.javafaker.Faker;
+import com.google.common.collect.ImmutableMap;
 import com.google.gson.Gson;
 import io.wisetime.connector.sql.queries.TagQuery;
 import io.wisetime.connector.sql.sync.TagSyncRecord;
@@ -12,8 +13,6 @@ import java.time.Instant;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.Collections;
-import java.util.Map;
-import java.util.Optional;
 
 /**
  * Generate random entities for tests.
@@ -31,7 +30,8 @@ public class RandomEntities {
     tagSyncRecord.setId(faker.numerify("#####"));
     tagSyncRecord.setTagName(faker.bothify("??######??").toUpperCase());
     tagSyncRecord.setAdditionalKeyword(tagSyncRecord.getTagName());
-    tagSyncRecord.setTagMetadata(gson.toJson(Map.of("name", faker.company().name(), "url", faker.company().url())));
+    tagSyncRecord.setTagMetadata(
+        gson.toJson(ImmutableMap.of("name", faker.company().name(), "url", faker.company().url())));
     tagSyncRecord.setTagDescription(faker.lorem().characters(12, 35));
     tagSyncRecord.setSyncMarker(fixedTimeMinusMinutes(faker.random().nextInt(1, 120)));
     return tagSyncRecord;
